# learn-cmake-qdu-classroom-management

./: CMakeLists.txt  MNIST手写数字识别.ipynb  MNIST手写数字识别.py  README.md  model.onnx  model.pth
detect/: CMakeLists.txt  package.xml
detect/src/: detect.cpp
src/: CMakeLists.txt
src/apps/classroom/: CMakeLists.txt  main.cpp
src/device/: CMakeLists.txt
src/device/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/device/computer/: CMakeLists.txt  computer.cpp  computer.hpp
src/device/sets/: CMakeLists.txt  sets.cpp  sets.hpp
src/study/: CMakeLists.txt
src/study/course/: CMakeLists.txt  course.cpp  course.hpp
src/study/self_learn/: CMakeLists.txt  self_learn.cpp  self_learn.hpp
