cmake_minimum_required(VERSION 3.12)

project(classroom_management
    DESCRIPTION "青岛大学教室管理系统byCMAKE"
    VERSION 0.1.0
    LANGUAGES CXX
)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()

# ---------------------------------------------------------------------------------------
# Platform
# ---------------------------------------------------------------------------------------

# ---------------------------------------------------------------------------------------
# Compiler Options
# ---------------------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ---------------------------------------------------------------------------------------
# Building Options
# ---------------------------------------------------------------------------------------
find_package(spdlog REQUIRED)
find_package(OpenCV REQUIRED)

include_directories(include)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)

# ---------------------------------------------------------------------------------------
# Packages Option
# ---------------------------------------------------------------------------------------
set(ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_INSTALL_LIBDIR ${ROOT_PATH}/build/install/lib/)
set(CMAKE_INSTALL_BINDIR ${ROOT_PATH}/build/install/bin/)
set(CMAKE_INSTALL_INCLUDEDIR ${ROOT_PATH}/build/install/include/)

# ---------------------------------------------------------------------------------------
# Source
# ---------------------------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)

# ---------------------------------------------------------------------------------------
# Test
# ---------------------------------------------------------------------------------------

# ---------------------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------------------
