cmake_minimum_required(VERSION 3.12)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/course)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/self_learn)


install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/course/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/self_learn/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(TARGETS course
    EXPORT course
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(TARGETS self_learn
    EXPORT self_learn
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
